--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Navbar --->
   <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4 p-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">LAIKA</a>
+      <a class="navbar-brand" href="#laika">LAIKA</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,11 +35,11 @@
             <a class="nav-link" aria-current="page" href="#robo">Robô</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Hardware">Hardware</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#arma">Arma</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Hardware">Hardware</a>
+          </li>  
           <li class="nav-item">
             <a class="nav-link" href="#equipe">Equipe</a>
           </li>
@@ -49,9 +49,9 @@
   </nav>
   <!-- Fim Navbar --->
 
-  <!-- Seção sobre robô --->
+  <!-- Seção Laika --->
 
-  <section id="robo" class="row mx-2 p-md-2">
+  <section id="laika" class="row mx-2 p-md-2">
     <div class="col-md-6">
 
       <h1 class="text-center"> Sobre o nosso robô</h1>
@@ -74,7 +74,7 @@
       <div class="accordion">
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
               aria-expanded="true" aria-controls="collapseOne">
               Laika
             </button>
@@ -130,7 +130,7 @@
   </section>
 
   <!-- img robô  --->
-  <section class="container mt-5 mb-5">
+  <section id="robo" class="container mt-5 mb-5">
     <h2 class="text-center mb-3"> Imagens do robô </h2>
     <div class="row">
 
@@ -167,8 +167,8 @@
   <!-- Seção Arma  --->
   <section id="arma" class="container-md mt-5 mb-5">
     <h3 class="text-center">Funcionamento da Arma </h3>
-    <p>A arma do robô é formada por dois b raços feitos com palitos de churrasco que possuem bolas de isopor nas pontas.
-      A arma é acionada pela chave fim de curso que mandam o sinal para os motores onde a arma foi posicionada
+    <p>A arma do robô é formada por dois braços feitos com palitos de churrasco que possuem bolas de isopor nas pontas.
+      A arma é acionada pela chave fim de curso que manda o sinal para os motores onde a arma foi posicionada
       realizando um movimento semelhante ao de um braço humano. O objetivo é gerar um impacto direcionado para estourar
       o balão do adversário. Quando ativada, a arma balança rapidamente para frente, atingindo o alvo com precisão. O
       design simples, mas eficaz, permite que o robô ataque de maneira rápida e controlada, maximizando a chance de
@@ -294,7 +294,7 @@
   <!-- Seção equipe  --->
   <section id="equipe" class="container-md mt-5 mb-5">
 
-    <h4 class="text-center mb-5"> Equipe Responsavel pelo projeto</h4>
+    <h4 class="text-center mb-5"> Equipe responsável pelo projeto</h4>
 
     <div class="row">
 
