--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#equipe">Equipe</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contato">contato</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -319,7 +322,7 @@
 </section>
 <!-- Fim Seção equipe  --->
 
-<section class="container my-5">
+<section id="contato" class="container my-5">
     <h2 class="text-center mb-4">Formulário para contato</h2>
     
     <form id="dadosConta" name="dadosConta" method="get" action="">
