Ajuste no formulário

--- a/index.html
+++ b/index.html
@@ -322,26 +322,27 @@
 </section>
 <!-- Fim Seção equipe  --->
 
+<!-- Formulário  --->
 <section id="contato" class="container my-5">
     <h2 class="text-center mb-4">Formulário para contato</h2>
     
     <form id="dadosConta" name="dadosConta" method="get" action="">
         <div class="row">
             <div class="col-6 my-3">
-                <label for="usuario" class="form-label">Usuário</label>
-                <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Ex: user"
+                <label for="usuario" class="form-label">Nome</label>
+                <input type="text" id="usuario" name="usuario" class="form-control" placeholder="User"
                     minlength="10" maxlength="20" required>
             </div>
 
             <div class="col-md-6 my-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" id="email" name="email" class="form-control"
-                    placeholder="Ex: email@gmail.com" maxlength="50" required>
+                    placeholder="email@gmail.com" maxlength="50" required>
             </div>
 
             <div class="col-md-4 my-3">
-                <label for="dataCadastro" class="form-label">Número para contato</label>
-                <input type="tel" id="dataCadastro" name="dataCadastro" class="form-control"
+                <label for="numerotelefone" class="form-label">Número para contato</label>
+                <input type="tel" id="numerotelefone" name="numerotelefone" class="form-control"
                     placeholder="11999999999" minlength="11" maxlength="13" required>
             </div>
 
