--- a/index.html
+++ b/index.html
@@ -501,6 +501,15 @@
     <!-- Fim Accordion detalhes  --->
   </section>
 
+  <!-- Seção Seja Meu Sócio -->
+<section id="seja-meu-socio" class="container-md mt-5 mb-5 text-center">
+    <h2 class="display-4 text-primary mb-4">Seja Meu Sócio</h2>
+    <p class="lead">Junte-se a nós nesta jornada emocionante de robótica e inovação. Contribua para o desenvolvimento de soluções inovadoras e faça parte do nosso projeto!</p>
+    <a href="sejameusocio.html" class="btn btn-success btn-lg">Saiba Mais</a>
+</section>
+<!-- Fim da Seção Seja Meu Sócio -->
+
+
   <footer class="bg-dark text-center text-white p-4">
     <h5>Contato</h5>
     <div class="mb-3">
