--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#contato">contato</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#seja-meu-socio">Seja sócio</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -503,7 +506,7 @@
 
   <!-- Seção Seja Meu Sócio -->
 <section id="seja-meu-socio" class="container-md mt-5 mb-5 text-center">
-    <h2 class="display-4 text-primary mb-4">Seja Meu Sócio</h2>
+    <h2 class="display-4 text-primary mb-4">Seja sócio</h2>
     <p class="lead">Junte-se a nós nesta jornada emocionante de robótica e inovação. Contribua para o desenvolvimento de soluções inovadoras e faça parte do nosso projeto!</p>
     <a href="sejameusocio.html" class="btn btn-success btn-lg">Saiba Mais</a>
 </section>
