--- a/sejameusocio.html
+++ b/sejameusocio.html
@@ -157,8 +157,7 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseQuem" aria-expanded="false" aria-controls="collapseQuem">
-                            Quem desenvolveu o seu produto?
+                            data-bs-target="#collapseQuem" aria-expanded="false" aria-controls="collapseQuem">Quem desenvolveu o produto?
                         </button>
                     </h2>
                     <div id="collapseQuem" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
